# ros-simple-moving-average-filter

./: README.md
project/: README.md
project/src/simple_moving_average/: CMakeLists.txt  package.xml
project/src/simple_moving_average/scripts/: sensor.py
project/src/simple_moving_average/src/: filter.cpp
